Alpha version of the Robotics Library with modified Api Seems to be stable
The ConnectionManager is no longer a fundamental piece for send data to the CommandManager,
now IConnector instances are used. The ConnectionManager property of the CommandManager is
kept for compatibility reasons, but within the ConnectionManager instance is wrapped by a
TcpPacketParser which extends IConnector.

Also a Sample project has been added to quick check functionality

--- a/Robotics/Robotics.csproj
+++ b/Robotics/Robotics.csproj
@@ -81,6 +81,7 @@
     <Compile Include="API\API.cs" />
     <Compile Include="API\AsyncFunctionCE.cs" />
     <Compile Include="API\ICommandManager.cs" />
+    <Compile Include="API\MessageParser.cs" />
     <Compile Include="API\MiscSharedVariables\KnownHumanFaces.cs" />
     <Compile Include="API\SharedVariableGeneric.cs" />
     <Compile Include="API\SharedVariableInfo.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="API\SharedVariable.cs" />
     <Compile Include="API\SharedVariableList.cs" />
     <Compile Include="API\SharedVariableSubscriptionReport.cs" />
+    <Compile Include="API\TcpPacketParser.cs" />
     <Compile Include="Controls\IdBox.cs">
       <SubType>Component</SubType>
     </Compile>
