Intermediate commit. Unstable
- New multipurpose generic delegate for events
  - void Robotics.EventHandler<S, E>(S sender, E eventArgs);

- New Robotics.Sockets namespace:
  - new TcpPacket class replaces System.Net.Sockets.TcpPacket
  - new TcpServer class replaces System.Net.Sockets.SocketTcpServer
  - new TcpClient class replaces System.Net.Sockets.SocketTcpClient

- The following classes and interfaces dependant on TCP connectivity were modified accordingly to compile state
  - Robotics.API.IConnectionManager (to be adapted)
  - Robotics.API.ConnectionManager (to be adapted with major changes)
  - Robotics.API.TcpPacketParser (to be redesigned)
  - Robotics.API.Module (to be adapted)

- The following classes were moved temporary to the System.Net.Sockets.Obsolete namespace
  - System.Net.Sockets.AsyncStateObject
  - System.Net.Sockets.SocketTcpClient
  - System.Net.Sockets.SocketTcpServer
  - System.Net.Sockets.SocketTcpServerClientBase
  - System.Net.Sockets.SocketUDP
  - System.Net.Sockets.SocketUdpClient
  - System.Net.Sockets.TcpPacket
  - System.Net.Sockets.UdpDataReceivedEventArgs
  - System.Net.Sockets.UdpPacket

- Project TestTcp was modified accordingly

--- a/Robotics/Robotics.csproj
+++ b/Robotics/Robotics.csproj
@@ -143,6 +143,11 @@
     <Compile Include="IService.cs" />
     <Compile Include="API\SharedVariableReport.cs" />
     <Compile Include="API\ParameterList.cs" />
+    <Compile Include="Sockets\AsyncStateObject.cs" />
+    <Compile Include="Sockets\Sockets.cs" />
+    <Compile Include="Sockets\TcpClient.cs" />
+    <Compile Include="Sockets\TcpPacket.cs" />
+    <Compile Include="Sockets\TcpServer.cs" />
     <Compile Include="StateMachines\EnumeratedFunctionState.cs" />
     <Compile Include="StateMachines\EnumeratedFunctionStateMachine.cs" />
     <Compile Include="StateMachines\FunctionBasedStateMachine.cs" />
@@ -201,9 +206,6 @@
     <None Include="Mathematics\MathematicsClassDiagram.cd" />
     <None Include="System.Net.Sockets\SocketClassDiagram.cd" />
     <None Include="StateMachines\StateMachines.cd" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Sockets\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
