Socket layer rebuilt. ConnectionManager reworked
- Corrected several typos in documentation
- Faster and more robust sockets implementation

- class **TcpServer**
  - Return type of SendTo methods changed from void to bool
  - Method SendTo no longer throws exception. Returns false when the server is not running or the client with the specifie endpoint is not connected
  - Method SendToAll no longer throws exception. Returns -1 when the server is not running

- enum **ConnectionManagerMode**
  - Has been removed

- interface **IConnector**
  - Modified all event's delegates

- interface **IConnectionManager**
  - Implements IConnector
    - Removed all Send() overloads (inherited from IConnector)
  - Removed unidirectional support
    - Removed event Disconnected
    - Removed event Connected
    - Removed all overloads of method SendToAllClients
  - Modified events' delegates

- class **ConnectionManager**
  - Implements IConnector
    - Connected event fires when the first client gets connected
    - Disconnected event fires when the last client gets disconnected
    - Uses one thread per client to parse incomming data
  - Increased robustness and thread safety
  - Removed custom buffer size
  - Removed unidirectional support
    - Changed behavior for Disconnected event
    - Changed behavior for Connected event
    - Removed all overloads of method serverSend
    - Removed all overloads of method clientSend
    - Method tcpSend(string) replaced by method Send(string) which send only through server
    - Method serverSend(string, IPEndpoint) replaced by method Send(string, IPEndpoint)
  - Structure simplified
    - Exposed the TCPServer object
    - Removed property IsServerStarted
    - Removed all overloads of method Console
    - Removed all overloads of method SendTo
    - Removed all overloads of method SendToAllClients
  - Modified delegates of following events
    - ClientConnected
    - ClientDisconnected
  -

- class **CommandManager**
    - Modified to 

--- a/Robotics/Robotics.csproj
+++ b/Robotics/Robotics.csproj
@@ -82,7 +82,6 @@
     <Compile Include="API\API.cs" />
     <Compile Include="API\AsyncFunctionCE.cs" />
     <Compile Include="API\ICommandManager.cs" />
-    <Compile Include="API\MessageParser.cs" />
     <Compile Include="API\MiscSharedVariables\KnownHumanFaces.cs" />
     <Compile Include="API\PrimitiveSharedVariables\MimeFile.cs" />
     <Compile Include="API\PrimitiveSharedVariables\MimeFileSharedVariable.cs" />
@@ -111,7 +110,6 @@
     <Compile Include="API\SharedVariable.cs" />
     <Compile Include="API\SharedVariableList.cs" />
     <Compile Include="API\SharedVariableSubscriptionReport.cs" />
-    <Compile Include="API\TcpPacketParser.cs" />
     <Compile Include="Controls\IdBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -144,6 +142,7 @@
     <Compile Include="API\SharedVariableReport.cs" />
     <Compile Include="API\ParameterList.cs" />
     <Compile Include="Sockets\AsyncStateObject.cs" />
+    <Compile Include="Sockets\AsyncTcpPacketReader.cs" />
     <Compile Include="Sockets\Sockets.cs" />
     <Compile Include="Sockets\TcpClient.cs" />
     <Compile Include="Sockets\TcpPacket.cs" />
@@ -158,6 +157,7 @@
     <Compile Include="StateMachines\StateMachineBase.cs" />
     <Compile Include="StateMachines\StateMachines.cs" />
     <Compile Include="API\SubscriptionInfo.cs" />
+    <Compile Include="API\TcpPacketParser.cs" />
     <Compile Include="Utilities\Clamper.cs" />
     <Compile Include="Utilities\ILogWriter.cs" />
     <Compile Include="Utilities\LogWriter.cs" />
@@ -201,6 +201,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="API\ApiClassDiagram.cd" />
+    <Compile Include="API\TcpPacketParser.Task.cs" />
     <None Include="ClassDiagram.cd" />
     <None Include="HAL\Sensors\Sensors.cd" />
     <None Include="Mathematics\MathematicsClassDiagram.cd" />
